[package]
name = "acme-tiny"
version = "0.1.3"
edition = "2024"

[dependencies]
base64 = "0.22"
clap = { version = "4.0", features = ["derive", "wrap_help"] }
dotenvy = "0.15"
env_logger = "0.11"
hex = "0.4"
log = "0.4"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
chrono = "0.4"
